collapsable fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,9 @@ h4 {
 }
 
 #basicPlanCollapse,
-#premiumPlanCollapse {
+#premiumPlanCollapse,
+#businessPlanCollapse,
+#enterprisePlanCollapse {
   width: 100%;
   padding: 10px;
   height: 150px;
